# shortcuts

./: .gitignore  .travis.yml  Gemfile  README.md  requirements.txt  sample-config.toml  setup.cfg  setup.py  shortcuts  tests.rb
.github/workflows/: ci.yml
shortcuts/: __init__.py  __main__.py
