[metadata]
name = shortcuts
version = 0.1.0
description = "Creates arbitrary shell scripts from a configuration file; shortcuts"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/seanbreckenridge/shortcuts"
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = scripting

[options]
packages = find:
install_requires =
    click>=7.0
    toml
python_requires = >=3.8
include_package_data = True

[options.packages.find]
include =
    shortcuts

[options.entry_points]
console_scripts =
    shortcuts = shortcuts.__main__:cli

[options.extras_require]
testing =
    flake8
    mypy

[options.package_data]
shortcuts = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
disallow_any_generics = False
show_error_context = True
show_error_codes = True
namespace_packages = True
disallow_subclassing_any = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
